--- a/my-app/src/app/appComponent/app.component.html
+++ b/my-app/src/app/appComponent/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>{{title}}</h1>
-<nav>
- <a routerLink="/dashboard">Dashboard</a>
- <a routerLink="/heroes">Heroes</a>
-</nav>
-<router-outlet></router-outlet>
+  <h1>{{title}}</h1>
+  <nav>
+    <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+    <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+  </nav>
+  <router-outlet></router-outlet>
 
